feat: 토큰 처리 로직 변경